--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/summary.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/summary.vm
@@ -22,6 +22,25 @@ $viewTools.startTimer("gui/reports_and_tables/tabs/summary")
 #if(!$report)
   #set($report = $sessionData.getReport())
 #end
+#set($table = $report.getParentTable())
+#if($report.equals($table.getDefaultReport()))
+  <div class="warning">
+    Please use a report rather than a table to see charts and visualisations.<p>
+    #set($tableReports = $view.getViewableReport($table)
+    #if($tableReports.size() > 0)
+      See<br>
+      #foreach($tableReport in $tableReports)
+        $tableReport.getModule() -> $tableReport<br />
+      #end<p>
+    #end
+    #if($view.loggedInUserAllowedTo("MANAGE_TABLE",$table))
+      or create a new report from the manage tab
+    #else
+      or ask an administrator to create a new report
+    #end
+  </div>
+#else ## rest of file - standard vis. tab
+
 #set($chart = $report.getChart())
 #set($defaultChart = $chart)
 #set($groupings = $chart.getGroupings())
@@ -343,5 +362,7 @@ $viewTools.startTimer("gui/reports_and_tables/tabs/summary")
 #parse('gui/reports_and_tables/tabs/summary_chart.vm')
 #if($mobile_device)<p>
 	#parse("gui/mobile/pane2_footer.vm")
+#end
+
 #end
 $viewTools.stopTimer("gui/reports_and_tables/tabs/summary")
