Form tab editing debug

--- a/gtpb_clientside/WEB-INF/templates/gui/administration/tables/option_sets/table_details_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/tables/option_sets/table_details_data.vm
@@ -92,6 +92,7 @@
     </select>
   </form>
   Existing tabs:<br />
+  Form tabs are $table.getFormTabs()<br>
   #foreach($formTab in $table.getFormTabs())
     <a href="?return=gui/reports_and_tables/pane3&remove_form_tab=true&tabtable=$formTab.getTable().getInternalTableName()"><img src="resources/toolbar/delete.png" alt="delete $fileName" style="width:13px; height:13px"></a> $formTab<br />
   #end
