--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -783,9 +783,21 @@ div#reportData {
   font-size: 9pt;
   display: inline-block;
   margin: 0.5em;
+  margin-right: 0;
   padding: 0.5em;
   text-align: center;
   width: 13em;
+  -webkit-transition-property: background-color;
+  -webkit-transition-duration: 1s;
+  -moz-transition-property: background-color;
+  -moz-transition-duration: 1s;
+  transition-property: background-color;
+  transition-duration: 1s;
+}
+
+#form_tabber .tab_choice:hover {
+  cursor: pointer;
+  background-color: #f4f4f4;
 }
 
 /* 3) Summary tab css */
