--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/form_tabber.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/form_tabber.vm
@@ -1,5 +1,5 @@
 <div id="form_tabber">
-  <div class="tab_choice">$sessionTable.getSingularName()</div>
+  <div class="tab_choice active">$sessionTable.getSingularName()</div>
   #foreach($formTab in $formTabs)
     <div class="tab_choice">$formTab</div>
   #end
