--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -797,6 +797,7 @@ div#reportData {
 
 #form_tabber .tab_choice.active {
   color: black;
+  background-color: #EEF3F9;
 }
 
 #form_tabber .tab_choice:hover {
