--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -777,7 +777,7 @@ div#reportData {
 
 #form_tabber .tab_choice {
   background-color: white;
-  color: #777777;
+  color: black; /* #777777 */
   border-radius: 0.5em;
   text-transform: uppercase;
   font-size: 9pt;
@@ -793,7 +793,7 @@ div#reportData {
   -moz-transition-duration: 1s;
   transition-property: background-color, color;
   transition-duration: 1s;
-  background-color: #f4f4f4;
+  background-color: none; /* #f4f4f4 */
 }
 
 #form_tabber .tab_choice.active {
