--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/form_tabber.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/form_tabber.vm
@@ -1,6 +1,9 @@
-<div id="form_tabber">
+<div id="form_tabber" data-internaltablename="$sessionTable.getInternalTableName()">
   <div class="tab_choice active">$sessionTable.getSingularName()</div>
   #foreach($formTab in $formTabs)
-    <div class="tab_choice">$formTab</div>
+    #set($formTable = $formTab.getTable())
+    #if($view.loggedInUserAllowedTo("VIEW_TABLE_DATA",$formTable))
+      <div class="tab_choice" data-internaltablename="$formTable.getInternalTableName()">$formTab</div>
+    #end
   #end
 </div>
