--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/form_tabber.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/form_tabber.vm
@@ -1,4 +1,4 @@
-<div id="form_tabber" data-internaltablename="$sessionTable.getInternalTableName()">
+<div class="form_tabber" data-internaltablename="$sessionTable.getInternalTableName()">
   <div class="tab_choice active">$sessionTable.getSingularName()</div>
   #foreach($formTab in $formTabs)
     #set($formTable = $formTab.getTable())
