Form tab ajax load: debug

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/tab_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/tab_content.vm
@@ -1,4 +1,4 @@
-#set($sessionTable = $sessionData.getTable("tabTable"))
+#set($sessionTable = $sessionData.getCustomTable("tabTable"))
 #set($parentTable = $sessionData.getTable())
 ## Get the tab object associated with the tab table
 #foreach($testFormTab in $parentTable.getFormTabs())
