--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/tab_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/tab_content.vm
@@ -21,5 +21,11 @@
   #set($primaryKey = $sessionTable.getPrimaryKey())
   #set($lastField = $fields.last())
   #set($formStyle = $sessionTable.getFormStyle())
+  #if($formStyle == "SINGLE_COLUMN")
+    <table cellspacing="0" cellpadding="0" border="0" >
+  #end
   #parse("gui/reports_and_tables/tabs/edit_content.vm")
+  #if($formStyle == "SINGLE_COLUMN")
+    </table>
+  #end
 #end
