--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/form_tabber.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/form_tabber.vm
@@ -1,5 +1,5 @@
 <div class="form_tabber" data-internaltablename="$sessionTable.getInternalTableName()">
-  <div class="tab_choice active">$sessionTable.getSingularName()</div>
+  <div class="tab_choice active" data-internaltablename="$sessionTable.getInternalTableName()">$sessionTable.getSingularName()</div>
   #foreach($formTab in $formTabs)
     #set($formTable = $formTab.getTable())
     #if($view.loggedInUserAllowedTo("VIEW_TABLE_DATA",$formTable))
