Line charts not area when plotting multiple lines

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/summary_chart.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/summary_chart.vm
@@ -228,7 +228,7 @@
 			#if($dateAxis)
         #if($scatter)
           defaultSeriesType: 'scatter',
-        #elseif($timeline)
+        #elseif($timeline || ($aggregateFunctions.size() > 1))
           defaultSeriesType: 'line',
         #else
           defaultSeriesType: 'area',
