Tabs UI each tab content in a div

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
@@ -26,7 +26,7 @@
     #if($formTabs.size() > 0)
       #parse("gui/reports_and_tables/tabs/form_tabber.vm")
     #end
-    <div #if($formStyle == "TWO_COLUMNS") class="two_cols" id="form_tabs_$sessionTable.getInternalTableName()" #end> <!-- start of sections container -->
+    <div #if($formStyle == "TWO_COLUMNS") class="two_cols" #end id="form_tabs_$sessionTable.getInternalTableName()"> <!-- start of sections container -->
     #set($firstSection = false)
   #end
   #if($formStyle == 'TWO_COLUMNS')
@@ -42,7 +42,7 @@
   #if($field.equals($firstField))
     #if((!$hasSections) && ($formTabs.size() > 0))
       #parse("gui/reports_and_tables/tabs/form_tabber.vm")
-      <div class="block two_cols non_section" id="form_tabs_$sessionTable.getInternalTableName()">
+      <div class="block two_cols non_section" id="form_tabs_$sessionTable.getInternalTableName()_$sessionTable.getInternalTableName()">
     #else
       <div class="block two_cols non_section">
     #end
@@ -61,5 +61,9 @@
   </div> <!-- end of last block -->
   #if($hasSections)
     </div> <!-- end of two sections container -->
+  #end
+  #foreach($formTab in $formTabs)
+    <div style="display:none" id="form_tabs_$sessionTable.getInternalTableName()_$formTab.getTable().getInternalTableName()">
+    </div>
   #end
 #end
