Tabs UI each tab content in a div: debug

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/edit_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/edit_content.vm
@@ -19,6 +19,8 @@
 #foreach($field in $fields)
   #if($field.getFieldCategory() == "SEPARATOR")
     #set($hasSections = true)
+  #elseif(!$field.getHidden())
+    #set($lastField = $field)
   #end
 #end
 #foreach($field in $fields)
@@ -28,4 +30,4 @@
     #end
     #parse("gui/reports_and_tables/tabs/table_data_row.vm")
   #end
-#end ## end loop through fields
+#end
