Tabs UI each tab content in a div: debug

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
@@ -58,13 +58,14 @@
   </div>
 #end
 #if($field.equals($lastField))
+  We're at the last field $lastField
   </div> <!-- end of last block -->
   #if($hasSections)
+    End of sections
     </div> <!-- end of two sections container -->
   #end
   #foreach($formTab in $formTabs)
     <div style="display:none" id="form_tabs_$sessionTable.getInternalTableName()_$formTab.getTable().getInternalTableName()">
     </div>
   #end
-  This is the end
 #end
