Tabs UI each tab content in a div: debug

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
@@ -59,6 +59,9 @@
 #end
 #if($field.equals($lastField))
   We're at the last field $lastField
+  #if($formStyle == 'TWO_COLUMNS')
+    </td></tr></table>
+  #end
   </div> <!-- end of last block -->
   #if($hasSections)
     End of sections
