Tabs UI each tab content in a div

--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -769,7 +769,7 @@ div#reportData {
 }
 
 .form_tabber {
-  background-color: #cccccc;
+  background-color: #DDE6EF; /*cccccc*/
   margin: 0.5em;
   border-radius: 0.5em;
   margin-right: 0;
