Tabs report selector: debug

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/tab_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/tab_content.vm
@@ -14,6 +14,7 @@
   #if($selectorReport)
     #set($filter = $viewTools.getNewFilterMap())
     #set($success = $filter.put($parentTable.getPrimaryKey(), $parentRowId))
+    Getting data rows for $selectorReport with filter $filter<br>
     #set($reportDataRows = $view.getReportDataRows($selectorReport, 10, $filter, true))
     Debug: Child rows found: $reportDataRows
   #end
