Ability to create cross joins fix

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/report_fields/option_sets/joins_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/report_fields/option_sets/joins_data.vm
@@ -196,7 +196,7 @@
 		    <option value="LEFT_OUTER" selected>left outer</option>
 		    <option value="RIGHT_OUTER">right outer</option>
 		    <option value="FULL_OUTER">full outer</option>
-		    <option value="NONE">cross</option>
+		    <option value="CROSS">cross</option>
 		  </select>
 	</td>
 			
