--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/tab_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/tab_content.vm
@@ -15,7 +15,8 @@
     #set($filter = $viewTools.getNewFilterMap())
     #set($success = $filter.put($parentTable.getPrimaryKey(), "$parentRowId"))
     #set($reportDataRows = $view.getReportDataRows($selectorReport,10,$filter,true))
-    Debug: Child rows found: $reportDataRows
+    #set($sessionReport = $selectorReport)
+    #parse("gui/reports_and_tables/report_data.vm")
   #end
   #set($fields = $sessionTable.getFields())
   #set($primaryKey = $sessionTable.getPrimaryKey())
